--- a/src/styles.scss
+++ b/src/styles.scss
@@ -159,6 +159,7 @@ body {
     .dialog-description {
       padding: 0 24px 13px;
       color: $gray;
+      font-size: .9rem;
    }
   }
   mat-dialog-content {
