--- a/src/app/pages/backend/user/index.component.html
+++ b/src/app/pages/backend/user/index.component.html
@@ -1,5 +1,5 @@
 <title-backend-app [data]="dataTitle">
-  <button mat-flat-button class="btn-admin" (click)="onOpenDialogNewUser()">
+  <button mat-flat-button class="btn-admin" matTooltip="Add user" (click)="onOpenDialogNewUser()">
     <mat-icon fontIcon="add" />
     Add
   </button>
