[feat]: add feat for create new category

--- a/src/app/pages/backend/category/index.component.html
+++ b/src/app/pages/backend/category/index.component.html
@@ -1,5 +1,5 @@
 <title-backend-app [data]="dataTitle">
-  <button mat-flat-button class="btn-admin" matTooltip="Add category">
+  <button mat-flat-button class="btn-admin" matTooltip="Add category" (click)="onAddHandler()">
     <mat-icon fontIcon="add" />
     Add
   </button>
