--- a/src/app/components/backend/quiz/stepper/index.component.scss
+++ b/src/app/components/backend/quiz/stepper/index.component.scss
@@ -1,1 +1,7 @@
 @use '../../../../../styles.scss' as *;
+
+.stepper-container {
+    background-color: white;
+    border-radius: 30px;
+    box-shadow: 1px 1px 10px rgba($black, .05);
+}
