[fix]: fix step control, active step must be valid before user access the next step and add max validation for total question is 300

--- a/src/app/components/backend/quiz/stepper/index.component.html
+++ b/src/app/components/backend/quiz/stepper/index.component.html
@@ -1,5 +1,5 @@
 <mat-stepper #stepper linear class="stepper-container" [orientation]="stepperOrientation">
-  <mat-step>
+  <mat-step [completed]="formQuizData">
     <ng-template matStepLabel>Fill identity or setup quiz</ng-template>
     <ng-template matStepContent>
       <quiz-form-app (eventSubmitForm)="onHandleQuizSubmitForm($event)"/>
