--- a/src/app/components/backend/quiz/stepper/formQuiz/index.component.html
+++ b/src/app/components/backend/quiz/stepper/formQuiz/index.component.html
@@ -106,6 +106,7 @@
       placeholder="Type total question here."
       required
       min="1"
+      max="300"
     />
     <mat-error class="form-error">{{
       getErrorMessage("totalQuestion")
@@ -134,6 +135,7 @@
       formControlName="description"
       maxlength="500"
       placeholder="Type description here."
+      rows="5"
     ></textarea>
     <mat-error class="form-error">{{
       getErrorMessage("description")
@@ -142,8 +144,15 @@
       >Max Length: {{ descriptionInput.value.length }} / 500</mat-hint
     >
   </mat-form-field>
-  <button type="submit" mat-flat-button class="btn-admin" matTooltip="Next">
-    <mat-icon fontIcon="chevron_right" />
-    Next
-  </button>
+  @if (isSaveClickedTime() > 0) {
+    <button type="submit" mat-flat-button class="btn-admin" matTooltip="Next">
+      <mat-icon fontIcon="chevron_right" />
+      Next
+    </button>
+  } @else { 
+    <button type="submit" mat-flat-button class="btn-admin" matTooltip="Next">
+      <mat-icon fontIcon="save" />
+      Save
+    </button>
+  }
 </form>
