[style]: restyle margin bottom from every single form field

--- a/src/app/components/contactUs/index.component.scss
+++ b/src/app/components/contactUs/index.component.scss
@@ -50,7 +50,11 @@
 
         .form-field {
           width: 100%;
-          margin-bottom: 10px;
+          transition: margin-bottom .3s ease;
+
+          &:has(.error-message) {
+            margin-bottom: 10px;
+          }
 
           .error-message {
             position: absolute;
