[feat]: add alert component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,9 @@ $gray-white: #f7f7f7;
 $gray: #a0a0a0;
 $yellow: #f9b822;
 $black: #111111;
+$green: #28a745;
+$red: #dc3545;
+$blue: #17a2b8;
 
 // Breakpoints
 $max-width-tablet: 769px;
