--- a/src/app/components/alert/index.component.html
+++ b/src/app/components/alert/index.component.html
@@ -1,10 +1,17 @@
 <div #alert class="alert-{{ type }}">
-  <mat-icon class="alert-{{type}}-icon" [fontIcon]="iconType" />
-  <div>
-    <h5 class="alert-title">{{title}}</h5>
-    <p class="alert-message">{{ message }}</p>
+  <div class="alert-{{ type }}__left">
+    <mat-icon class="alert-{{ type }}__left__icon" [fontIcon]="iconType" />
+    <div>
+      <h5 class="alert-{{ type }}__left__title">{{ title }}</h5>
+      <p class="alert-{{ type }}__left__message">{{ message }}</p>
+    </div>
   </div>
-  <button type="button" mat-icon-button matTooltip="Dismiss alert" (click)="onDismissAlertHandler()">
-    <mat-icon fontIcon="close"/>
+  <button
+    type="button"
+    mat-icon-button
+    matTooltip="Dismiss alert"
+    (click)="onDismissAlertHandler()"
+  >
+    <mat-icon fontIcon="close" />
   </button>
 </div>
