[feat]: add feature for setup quiz or step 1 form the form stepper

--- a/src/app/components/backend/quiz/stepper/formQuiz/index.component.scss
+++ b/src/app/components/backend/quiz/stepper/formQuiz/index.component.scss
@@ -12,7 +12,7 @@
     }
 
     .thumbnail-wrapper {
-        margin-bottom: 20px;
+        margin: 20px 0;
 
         .form-field-thumbnail {
             position: relative;
