--- a/src/app/components/backend/quiz/stepper/formQuiz/index.component.html
+++ b/src/app/components/backend/quiz/stepper/formQuiz/index.component.html
@@ -1,4 +1,9 @@
 <form class="form" [formGroup]="quizForm" (ngSubmit)="onSubmitHandler()">
+  <alert-app
+    type="info"
+    title="Notes"
+    message="You only have one chance to setup quiz, you can't back to previous steps"
+  />
   <div class="thumbnail-wrapper">
     <label for="thumbnail" class="form-field-thumbnail">
       @if (thumbnail?.src) {
@@ -89,7 +94,9 @@
     <mat-select formControlName="typeQuizId" required>
       <mat-option disabled>--Select type quiz--</mat-option>
       @for (option of typeQuizOptions; track option.value) {
-      <mat-option [value]="option.value">{{ option.name }}</mat-option>
+      <mat-option [value]="option.slug + ':' + option.value">{{
+        option.name
+      }}</mat-option>
       }
     </mat-select>
     <mat-error class="form-error">{{
@@ -144,15 +151,8 @@
       >Max Length: {{ descriptionInput.value.length }} / 500</mat-hint
     >
   </mat-form-field>
-  @if (isSaveClickedTime() > 0) {
-    <button type="submit" mat-flat-button class="btn-admin" matTooltip="Next">
-      <mat-icon fontIcon="chevron_right" />
-      Next
-    </button>
-  } @else { 
-    <button type="submit" mat-flat-button class="btn-admin" matTooltip="Next">
-      <mat-icon fontIcon="save" />
-      Save
-    </button>
-  }
+  <button type="submit" mat-flat-button class="btn-admin" matTooltip="Next">
+    <mat-icon fontIcon="chevron_right" />
+    Next
+  </button>
 </form>
