--- a/src/app/components/backend/quiz/stepper/index.component.html
+++ b/src/app/components/backend/quiz/stepper/index.component.html
@@ -1,32 +1,75 @@
-<mat-stepper #stepper linear class="stepper-container" [orientation]="stepperOrientation">
-  <mat-step [completed]="formQuizData">
-    <ng-template matStepLabel>Fill identity or setup quiz</ng-template>
+<mat-stepper
+  #stepper
+  linear
+  class="stepper-container"
+  [orientation]="stepperOrientation"
+>
+  <mat-step editable="false" [completed]="formQuizData">
+    <ng-template matStepLabel>Setup quiz</ng-template>
     <ng-template matStepContent>
-      <quiz-form-app (eventSubmitForm)="onHandleQuizSubmitForm($event)"/>
+      <quiz-form-app (eventSubmitForm)="onQuizSubmitFormHandler($event)" />
     </ng-template>
   </mat-step>
-  <mat-step [stepControl]="secondFormGroup" label="Fill out your address">
-    <form [formGroup]="secondFormGroup">
-      <mat-form-field>
-        <mat-label>Address</mat-label>
-        <input
-          matInput
-          formControlName="secondCtrl"
-          placeholder="Ex. 1 Main St, New York, NY"
-          required
-        />
-      </mat-form-field>
-      <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
-      </div>
-    </form>
+  <mat-step editable="false" [completed]="formQuestionData">
+    <ng-template matStepLabel>Setup questions</ng-template>
+    <ng-template matStepContent>
+      <question-quiz-form-app
+        [totalQuestion]="totalQuestion"
+        [typeQuiz]="typeQuiz"
+        (eventSubmitForm)="onQuestionSubmitFormHandler($event)"
+      />
+    </ng-template>
   </mat-step>
   <mat-step>
     <ng-template matStepLabel>Done</ng-template>
-    <p>You are now done.</p>
-    <div>
-      <button class="btn-admin" mat-flat-button matStepperPrevious>Back</button>
-    </div>
+    <ng-template matStepContent>
+      <div class="summary-wrapper">
+        <mat-icon fontIcon="check_circle" class="summary-wrapper__icon"/>
+        <h3 class="summary-wrapper__title">Successfully Setup Quiz</h3>
+      </div>
+      <div class="summary-setup-quiz-wrapper">
+        <ul class="summary-setup-quiz-wrapper__list">
+          <li class="summary-setup-quiz-wrapper__list-item">
+            Title: {{ formQuizData.title }}
+          </li>
+          <li class="summary-setup-quiz-wrapper__list-item">
+            Description: {{ formQuizData.description }}
+          </li>
+          <li class="summary-setup-quiz-wrapper__list-item">
+            Timer: {{ formQuizData.timer }}
+          </li>
+        </ul>
+        <mat-divider />
+        <ul class="summary-setup-quiz-wrapper__list">
+          <li class="summary-setup-quiz-wrapper__list-item">
+            Total question: {{ totalQuestion }}
+          </li>
+          <li class="summary-setup-quiz-wrapper__list-item">
+            Type quiz: {{ typeQuiz }}
+          </li>
+        </ul>
+      </div>
+      <div class="summary-action">
+        <button
+          type="button"
+          class="btn-admin"
+          mat-flat-button
+          matTooltip="Reset quiz to step 1"
+        >
+          <mat-icon fontIcon="close" />
+          Reset
+        </button>
+        <button
+          type="button"
+          class="btn-admin"
+          mat-flat-button
+          matTooltip="Save quiz"
+          (click)="onSubmitHandler()"
+        >
+          <mat-icon fontIcon="save" />
+          Save
+        </button>
+      </div>
+    </ng-template>
   </mat-step>
 </mat-stepper>
