--- a/src/app/components/backend/quiz/card/card.component.html
+++ b/src/app/components/backend/quiz/card/card.component.html
@@ -42,6 +42,7 @@
               mat-icon-button
               class="card-item__content-info-footer__action__btn"
               matTooltip="Edit quiz {{$index + 1}}"
+              [routerLink]="['/admin/quiz/edit/' + quiz.id]"
             >
               <mat-icon fontIcon="edit" />
             </button>
