--- a/src/app/components/backend/quiz/card/card.component.scss
+++ b/src/app/components/backend/quiz/card/card.component.scss
@@ -14,7 +14,7 @@
             column-gap: 15px;
 
             &-image {
-                max-width: 120px;
+                width: 120px;
                 aspect-ratio: 1/1;   
                 border-radius: 7px;
             }  
